# Ubuntu_Aktualizacje

./: .claudeignore  .gitignore  .graphifyignore  AGENTS.md  APPS.md  APPS.md.example  CLAUDE.md  CODEX.md  DEV_SCRIPTS_README.md  MIGRATION.md  README.md  RELEASE_NOTES.md  RUN.md  dev-sync-import.sh  dev-sync-prune-excluded.sh  setup.sh  update-all.sh
.codex.local/: config.toml
app/: README.md
app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri/src-tauri/src/: main.rs
config/: apt-packages.list  apt-repos.list  brew-casks.list  brew-formulas.list  categories.toml  flatpak-packages.list  npm-globals.list  restore-manifest.json  snap-packages.list
dev-sync/: INDEX.md  QUICK_START.md  README.md  RESTORE_MANIFEST.md  __init__.py  dev-sync-export.sh  dev-sync-import.sh  dev-sync-proton-status.sh  dev-sync-prune-excluded.sh  dev-sync-purge-quarantine.sh  dev-sync-restore-preflight.sh  dev-sync-verify-full.sh  dev-sync-verify-git.sh  dev_sync_core.py  dev_sync_export.py  dev_sync_proton_status.py  dev_sync_restore_preflight.py  dev_sync_verify_full.py  dev_sync_verify_git.py
docs/: PROJECT_MAP.md  bootstrap-flow.md  last-run-review.md  machine-onboarding.md  recovery-flow.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
packaging/deb/opt/ubuntu-aktualizacje/app/: README.md  install.sh  pyproject.toml
packaging/deb/opt/ubuntu-aktualizacje/app/backend/: __main__.py  audit.py  auth.py  backup.py  config.py  db.py  health.py  main.py  metrics.py  report.py  sudo.py
packaging/deb/opt/ubuntu-aktualizacje/app/frontend/: app.js  index.html
(+210 files in other folders)
