[package]
name = "ubuntu-aktualizacje"
version = "0.1.0"
description = "Native Tauri shell for Ubuntu_Aktualizacje dashboard"
authors = ["mk <gaipro.mk@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

# Force a stable binary name regardless of package renames in the future.
[[bin]]
name = "ubuntu-aktualizacje"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
