[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ubuntu-aktualizacje-dashboard"
version = "0.1.0"
description = "Local dashboard for Ubuntu_Aktualizacje update suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[project.scripts]
ubuntu-aktualizacje-dashboard = "app.backend.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
